# nodecraft

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy-pages.yml
public/: index.html
public/css/: style.css
public/js/: blocks.js  config.js  crafting.js  inventory.js  items.js  main.js  mobs.js  network.js  noise.js  player.js  protocol-shim.js  remotePlayers.js  renderer.js  structures.js  touchControls.js  ui.js  weather.js  world.js
rust/: Cargo.toml  README.md  Trunk.toml  index.html
rust/.cargo/: config.toml
rust/src/: blocks.rs  chunk_gen.rs  chunk_material.rs  clouds.rs  collision.rs  config.rs  decorations.rs  effects.rs  fp_view.rs  inventory.rs  lib.rs  main.rs  menu.rs  meshing.rs  mob_models.rs  mobile.rs  mobs.rs  nav.rs  noise.rs  player.rs  player_body.rs  proc_mesh.rs  sky.rs  structures.rs  ui.rs  weather.rs  world.rs  world_gen.rs
rust/src/assets/: mod.rs  structures.rs
rust/src/shaders/: voxel_chunk.wgsl
src/: gameServer.js  server.js
src/shared/: protocol.js
