[package]
name = "nodecraft"
version = "0.2.0"
edition = "2021"
description = "Minecraft-like voxel sandbox — Rust + Bevy rebuild"
license = "MIT"

[[bin]]
name = "nodecraft"
path = "src/main.rs"

[[bin]]
name = "nodecraft-server"
path = "src/bin/server.rs"

[dependencies]
bevy = { version = "0.15", default-features = true }
bevy_egui = "0.31"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "sync"]
optional = true

[dependencies.axum]
version = "0.7"
features = ["ws"]
optional = true

[dependencies.tower-http]
version = "0.6"
features = ["fs"]
optional = true

[features]
default = ["server"]
server = ["dep:tokio", "dep:axum", "dep:tower-http"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
